typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode3.ts.stderr
error: TS1100
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode3.ts:2:1
  |
2 | eval = 1;
  | ^^^^

error: UndefinedSymbol {
    sym: Atom('eval' type=static),
    span: Span {
        lo: BytePos(
            15,
        ),
        hi: BytePos(
            19,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode3.ts:2:1
  |
2 | eval = 1;
  | ^^^^

